// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateModuleTypeDefinition > should generate the correct type definition 1`] = `
"import { CustomTypeOptions } from 'i18next'

declare module 'virtual:i18next-typed-loader' {
  const resources: {
    'en': CustomTypeOptions['resources']
    'es': CustomTypeOptions['resources']
    'en-GB': CustomTypeOptions['resources']
  }

  export default resources
}
"
`;

exports[`generateResourceTypeDefinition > should generate the correct type definition 1`] = `
"import 'i18next'

type GeneratedResources = {
  'translation': {
    'app.name': string
    'array': string
    'array.0': string
    'array.1': string
    'array.2': string
    'books.pagination': string
    'books.pagination_interval': string
    'ordinal.rank': string
    'ordinal.rank_ordinal_few': string
    'ordinal.rank_ordinal_many': string
    'ordinal.rank_ordinal_one': string
    'ordinal.rank_ordinal_other': string
    'ordinal.rank_ordinal_two': string
    'ordinal.rank_ordinal_zero': string
    'plural.items': string
    'plural.items_few': string
    'plural.items_many': string
    'plural.items_one': string
    'plural.items_other': string
    'plural.items_two': string
    'plural.items_zero': string
  }
}

type FlatGeneratedResources<TResource, NS extends keyof TResource> = {
  [Property in keyof TResource[NS] as \`\${NS & string}:\${Property & string}\`]: TResource[NS][Property]
}

declare module 'i18next' {
  interface CustomTypeOptions {
    defaultNS: 'translation'
    resources: GeneratedResources
      & { 'translation': FlatGeneratedResources<GeneratedResources, 'translation'> }
  }
}
"
`;

exports[`generateResourceTypeDefinition > should generate the correct type definition when expand is false 1`] = `
"import 'i18next'

type GeneratedResources = {
  'translation': {
    'app.name': string
    'array': string
    'books.pagination': string
    'ordinal.rank': string
    'plural.items': string
  }
}

type FlatGeneratedResources<TResource, NS extends keyof TResource> = {
  [Property in keyof TResource[NS] as \`\${NS & string}:\${Property & string}\`]: TResource[NS][Property]
}

declare module 'i18next' {
  interface CustomTypeOptions {
    defaultNS: 'translation'
    resources: GeneratedResources
      & { 'translation': FlatGeneratedResources<GeneratedResources, 'translation'> }
  }
}
"
`;

exports[`generateResourceTypeDefinition > should generate the correct type definition when expand is true 1`] = `
"import 'i18next'

type GeneratedResources = {
  'translation': {
    'app.name': string
    'array': string
    'array.0': string
    'array.1': string
    'array.2': string
    'books.pagination': string
    'books.pagination_interval': string
    'ordinal.rank': string
    'ordinal.rank_ordinal_few': string
    'ordinal.rank_ordinal_many': string
    'ordinal.rank_ordinal_one': string
    'ordinal.rank_ordinal_other': string
    'ordinal.rank_ordinal_two': string
    'ordinal.rank_ordinal_zero': string
    'plural.items': string
    'plural.items_few': string
    'plural.items_many': string
    'plural.items_one': string
    'plural.items_other': string
    'plural.items_two': string
    'plural.items_zero': string
  }
}

type FlatGeneratedResources<TResource, NS extends keyof TResource> = {
  [Property in keyof TResource[NS] as \`\${NS & string}:\${Property & string}\`]: TResource[NS][Property]
}

declare module 'i18next' {
  interface CustomTypeOptions {
    defaultNS: 'translation'
    resources: GeneratedResources
      & { 'translation': FlatGeneratedResources<GeneratedResources, 'translation'> }
  }
}
"
`;
